--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/mjun0812/gatsby-remark-amazon-link.git"
+  },
+  "release": {
+    "branches": [
+      "main"
+    ]
   }
 }
